--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
                                   type="radio"
                                   name="gender"
                                   id="gender1"
-                                  value="Laki-laki"
+                                  value="male"
                                 />
                                 <label class="form-check-label" for="gender1"
-                                  >Laki-laki</label
+                                  >Male</label
                                 >
                               </div>
                               <div class="form-check form-check-inline">
@@ -316,10 +316,10 @@
                                   type="radio"
                                   name="gender"
                                   id="gender2"
-                                  value="Perempuan"
+                                  value="female"
                                 />
                                 <label class="form-check-label" for="gender2"
-                                  >Perempuan</label
+                                  >Female</label
                                 >
                               </div>
                             </div>
